--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  overflow: hidden;
+}
+
 *:focus-visible {
   outline: 2px solid var(--color-focus-root);
   outline-offset: 1px;
