style: long project title

--- a/src/index.scss
+++ b/src/index.scss
@@ -277,6 +277,13 @@ body {
   overflow: hidden;
 }
 
+.truncate-to-one-line {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 .tippy-box {
   background-color: transparent !important;
   box-shadow: none !important;
